Avances en el modulo de Facturacion